--- a/build.gradle
+++ b/build.gradle
@@ -3933,6 +3933,9 @@ compileTargets { t ->
         def copyLegalTask = project.task("copyLegal$t.capital", type: Copy, dependsOn: copyBuildPropertiesTask) {
             from srcLegalDir
             into dstLegalDir
+
+            // Exclude ANGLE since we (currently) do not use it
+            exclude("angle.md")
         }
 
         buildModulesTask.dependsOn(
